# AgentGuardX-v1.0.1

./: README.md
agentguard-x/: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  agentguard.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-triage.txt  requirements.txt
agentguard-x/.github/: dependabot.yml
agentguard-x/.github/workflows/: ci.yml  security.yml
agentguard-x/agentguard/: __init__.py  toggle.py
agentguard-x/agentguard/analyst/: __init__.py  queue.py  service.py
agentguard-x/agentguard/gateway/: __init__.py  hooks.py  intent_gate.py  post_hook.py  query_interceptor.py  service.py
agentguard-x/agentguard/greyband/: __init__.py  router.py
agentguard-x/agentguard/observability/: __init__.py  telemetry.py
agentguard-x/agentguard/proxy/: __init__.py  a2a_parser.py  addon.py  domain_allowlist.py
agentguard-x/agentguard/registry/: __init__.py  agent_registry.py
agentguard-x/agentguard/sandbox/: __init__.py  executor.py  fingerprint.py  manager.py  model.py  pool.py
agentguard-x/agentguard/scoring/: __init__.py  engine.py  model.py
agentguard-x/agentguard/seed/: __init__.py  seed_kb.py
agentguard-x/agentguard/stages/: __init__.py  base.py  stage1_identity.py  stage2_signatures.py  stage3_opa.py  stage4_rag.py  stage5_behavioral.py
agentguard-x/agentguard/triage/: __init__.py  pipeline.py  service.py
agentguard-x/dashboards/: agentguard-threats.json
agentguard-x/docker/: Dockerfile.gateway  Dockerfile.proxy  Dockerfile.sandbox  Dockerfile.triage  gen-ca.sh  grafana-dashboards.yaml  grafana-datasources.yaml  otel-config.yaml  prometheus.yml  sandbox_run_tool.py
agentguard-x/integration/: demo.py  gateway_callback.py  runner_wrapper.py
agentguard-x/policies/rbac/: decision.rego  rbac.rego
agentguard-x/policies/sequences/: sequences.rego
(+41 files in other folders)
